Removed syntax highlight, updated themes, added CSS mediaquery for resizing images

--- a/layouts/partials/custom.html
+++ b/layouts/partials/custom.html
@@ -1,6 +1,35 @@
 <!-- highlightjs, a code syntax highlighting library -->
-<link rel="stylesheet" href="http://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.9/build/styles/default.min.css">
-<script src="http://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.9/build/highlight.min.js"></script>
+<!-- link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.9/build/styles/default.min.css">
+<script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@9.15.9/build/highlight.min.js"></script>
 <script>
   hljs.initHighlightingOnLoad();
-</script>
+</script -->
+
+<style>
+	/* Extra Small Devices, Phones */
+	@media screen and (min-width : 320px), print and (min-width : 320px) {
+		img {
+			max-width: 80%;
+		}
+	}
+	/* Small Devices, Tablets */
+    @media screen and (min-width : 768px), print and (min-width : 768px) {
+		img {
+			max-width: 60%;
+		}
+    }
+	/* Medium Devices, Desktops */
+    @media screen and (min-width : 992px), print and (min-width : 992px) {
+		img {
+			max-width: 40%;
+		}
+    }
+
+    /* Large Devices, Wide Screens */
+    @media screen and (min-width : 1200px), print and (min-width : 1200px) {
+		img {
+			max-width: 25%;
+		}
+    }
+
+</style>
