Added posts about p5,js

--- a/layouts/mainroad/_default/single.html
+++ b/layouts/mainroad/_default/single.html
@@ -30,6 +30,9 @@
 {{ range .Params.customJS -}}
 	<script src="{{ . | relURL }}"></script>
 {{- end }}
+{{ range .Params.externalJS -}}
+    <script src="{{ . | absURL }}"></script>
+{{- end }}
 {{ partial "authorbox.html" . }}
 {{ partial "pager.html" . }}
 {{ partial "comments.html" . }}
