--- a/layouts/mainroad/_default/single.html
+++ b/layouts/mainroad/_default/single.html
@@ -1,4 +1,11 @@
 {{ define "main" }}
+<style>
+    :fullscreen {
+        overflow-x :hidden;
+        overflow-y: hidden;
+    }
+</style>
+
 <main class="main" role="main">
 	<article class="post">
 		<header class="post__header">
@@ -26,7 +33,11 @@
 		{{- end }}
 	</article>
 </main>
+{{ .Site.Params.customCSS }}
 <!-- TODO remember to update this code -->
+{{ range .Site.Params.customCSS -}}
+    <link rel="stylesheet" href="{{ . | relURL }}">
+{{- end }}
 {{ range .Params.customJS -}}
 	<script src="{{ . | relURL }}"></script>
 {{- end }}
