--- a/layouts/mainroad/_default/baseof.html
+++ b/layouts/mainroad/_default/baseof.html
@@ -7,16 +7,13 @@
     <title>{{ block "title" . }}{{ if not .IsHome }}{{ .Title }} - {{ end }}{{ .Site.Title }}{{ end }}</title>
     
     <meta name="description" content="{{ if .IsHome }}{{ .Site.Params.description }}{{ else }}{{ .Params.Description }}{{ end }}">
-    {{ if .Site.Params.opengraph }}
+    {{- if .Site.Params.opengraph }}
         {{ template "_internal/opengraph.html" . }}
-    {{ end }}
-    {{ if .Site.Params.twitter_cards }}
+    {{- end }}
+    {{- if .Site.Params.twitter_cards }}
         {{ template "_internal/twitter_cards.html" . }}
-    {{ end }}
+    {{- end }}
 
-    {{ with .OutputFormats.Get "rss" -}}
-    {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
-    {{ end -}}
     
     {{ $style := resources.Get "css/style.css" | resources.ExecuteAsTemplate "css/style.css" . -}}
 
@@ -25,6 +22,10 @@
     {{ range .Site.Params.customCSS -}}
     <link rel="stylesheet" href="{{ . | relURL }}">
     {{- end }}
+
+    {{ with .OutputFormats.Get "rss" -}}
+    {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
+    {{ end -}}
 
     <link rel="shortcut icon" href="/static/wifi-5.svg" type="image/svg+xml">
 
