--- a/layouts/mainroad/partials/menu.html
+++ b/layouts/mainroad/partials/menu.html
@@ -1,45 +1,92 @@
+<!-- My custom menu' without javascript -->
+
 {{- if .Site.Menus.main }}
-<nav class="menu">
+  <div class="menu_button">
+    <!-- questo menu button è inutile,
+        serve solo a contenere la label
+        che permette di cliccarci sopra -->
+    <label for="my_menu">
+      {{ T "menu_label" }}
+      <span></span>
+      <span></span>
+      <span></span>
+    </label>
+  </div>
+  <input type="checkbox" id="my_menu">
+  <nav class="my_navbar">
+    <ul>
+      {{- $currentNode := . }}
 
-	<ul class="menu__list">
-		{{- $currentNode := . }}
-    <li>
-      <button class="menu__btn menu__btn--active" aria-haspopup="true" aria-expanded="true" tabindex="0" style="display: block; width: 100%; padding: 0; background: #2a2a2a; border: 0; outline: 0; color: #e22d30;">
-        <span class="menu__btn-title" tabindex="-1">{{ T "menu_label" }}</span>
-      </button>
-    </li>
-		{{- range .Site.Menus.main }}
-		{{- if .Name }}
-		<li>
-			<a class="menu__link" href="{{ .URL }}">
-				{{ .Pre }}
-				<span class="menu__text">{{ .Name }}</span>
-				{{ .Post }}
-			</a>
-		</li>
-		{{- end }}
-		{{- end }}
-	</ul>
-</nav>
-{{ else -}}
-<div class="divider"></div>
+      {{- range .Site.Menus.main }}
+  		{{- if .Name }}
+
+      <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+
+      {{- end }}
+      {{- end }}
+    </ul>
+  </nav>
+
+  <style>
+    /* CSS Barra di navigazione */
+    .my_navbar ul {
+      display: flex; /* mette le voci una di fila all'altra */
+      background-color: black;
+      color: white;
+    }
+    .my_navbar li {
+      padding: 15px 30px;
+      list-style: none;
+      text-transform: uppercase;
+      justify-content: center;
+    }
+    .my_navbar a {
+      color: white;
+      font-weight: 700;
+    }
+    /* CSS Pulsante da cliccare (invisibile su desktop)*/
+    .menu_button {
+      display: none;
+    }
+    .menu_button label {
+      background-color: white;
+      color: black;
+      border: 2px solid white;
+      height: 70px;
+      width: 70px;
+      display: flex; /* serve a permettere l'allineamento centrale, null'altro. */
+      justify-content: center;
+      align-items: center; /* allinea le righe nel pulsante */
+      flex-direction: column;
+    }
+    /* Righe nel pulsante */
+    .menu_button label span {
+      background-color: black;
+      color: white;
+      height: 3px;
+      width: 80%;
+      margin: 5px 0px;
+    }
+    /* checkbox (invisibile sempre)*/
+    #my_menu {
+      display: none;
+    }
+
+    /* Layout mobile */
+    @media screen and (max-width: 767px) {
+      /* CSS Pulsante da cliccare (visibile su mobile) */
+      .menu_button {
+        display: flex; /* serve a permettere l'allineamento a destra (con justify-content: flex-end), null'altro. */
+        justify-content: flex-end; /* pulsante menu a destra */
+      }
+      .my_navbar ul {
+         flex-direction: column;
+         display: none; /* nascondo il menu per schermi piccoli */
+      }
+      #my_menu:checked + .my_navbar ul {
+         display: flex; /* mostro il menu solo quando la chekcbox "my_menu" è checked. Il selettore CSS "+" è fondamentale. */
+         text-align: center;
+      }
+    }
+  </style>
 {{- end }}
-
-<script>
-  /*
-  var menuBtn = document.querySelector('.menu__btn');
-	var	menu = document.querySelector('.menu__list');
-
-  function toggleMenu() {
-    menu.classList.toggle("menu__list");
-  }
-
-  menuBtn.addEventListener('click', toggleMenu, false);
-  */
-</script>
-
-<style>
-  .menu__link { display: none; }
-  .menu__btn>li:hover>.menu__link { display: block; }
-
-</style>
