--- a/layouts/mainroad/_default/baseof.html
+++ b/layouts/mainroad/_default/baseof.html
@@ -27,7 +27,10 @@
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
     {{ end -}}
 
-    <link rel="shortcut icon" href="/static/wifi-5.svg" type="image/svg+xml">
+    <link rel="icon" href="/favicon.ico"><!-- 32×32 for legacy browsers -->
+    <link rel="icon" href="/static/wifi-5.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="/static/apple-touch-icon.png"><!-- 180×180 -->
+    <link rel="manifest" href="/static/manifest.webmanifest">
 
     {{ if .Site.Params.seoKeyword }}
         <meta name="keywords" content="{{ range .Site.Params.seoKeyword -}} {{ . | safeHTMLAttr }} {{ " " }} {{- end }}">
