--- a/layouts/mainroad/partials/menu/menu.html
+++ b/layouts/mainroad/partials/menu/menu.html
@@ -1,18 +1,7 @@
 <!-- My custom menu' without javascript -->
+<!-- see header.html -->
 
 {{- if .Site.Menus.main }}
-  <div class="menu_button">
-    <!-- questo menu button è inutile,
-        serve solo a contenere la label
-        che permette di cliccarci sopra -->
-    <label for="my_menu">
-      {{ T "menu_label" }}
-      <span></span>
-      <span></span>
-      <span></span>
-    </label>
-  </div>
-  <input type="checkbox" id="my_menu">
   <nav class="my_navbar">
     <ul>
       {{- $currentNode := . }}
@@ -26,67 +15,4 @@
       {{- end }}
     </ul>
   </nav>
-
-  <style>
-    /* CSS Barra di navigazione */
-    .my_navbar ul {
-      display: flex; /* mette le voci una di fila all'altra */
-      background-color: black;
-      color: white;
-    }
-    .my_navbar li {
-      padding: 15px 30px;
-      list-style: none;
-      text-transform: uppercase;
-      justify-content: center;
-    }
-    .my_navbar a {
-      color: white;
-      font-weight: 700;
-    }
-    /* CSS Pulsante da cliccare (invisibile su desktop)*/
-    .menu_button {
-      display: none;
-    }
-    .menu_button label {
-      background-color: white;
-      color: black;
-      border: 2px solid white;
-      height: 70px;
-      width: 70px;
-      display: flex; /* serve a permettere l'allineamento centrale, null'altro. */
-      justify-content: center;
-      align-items: center; /* allinea le righe nel pulsante */
-      flex-direction: column;
-    }
-    /* Righe nel pulsante */
-    .menu_button label span {
-      background-color: black;
-      color: white;
-      height: 3px;
-      width: 80%;
-      margin: 5px 0px;
-    }
-    /* checkbox (invisibile sempre)*/
-    #my_menu {
-      display: none;
-    }
-
-    /* Layout mobile */
-    @media screen and (max-width: 767px) {
-      /* CSS Pulsante da cliccare (visibile su mobile) */
-      .menu_button {
-        display: flex; /* serve a permettere l'allineamento a destra (con justify-content: flex-end), null'altro. */
-        justify-content: flex-end; /* pulsante menu a destra */
-      }
-      .my_navbar ul {
-         flex-direction: column;
-         display: none; /* nascondo il menu per schermi piccoli */
-      }
-      #my_menu:checked + .my_navbar ul {
-         display: flex; /* mostro il menu solo quando la chekcbox "my_menu" è checked. Il selettore CSS "+" è fondamentale. */
-         text-align: center;
-      }
-    }
-  </style>
 {{- end }}
