Restyling site title adding a link to home page

--- a/layouts/mainroad/partials/logo.html
+++ b/layouts/mainroad/partials/logo.html
@@ -24,11 +24,16 @@
       </div>
 
       <!-- site title -->
-      <div class="logo__item logo__text">
+      <div class="logo__item">
         <div class="logo__title">
-          {{ $logoTitle }}
+          <a href="/" style="color: #e22d30">
+            {{ $logoTitle }}
+          </a>
         </div>
       </div>
+
+
+
 
       <!-- menu button -->
       <div>
