--- a/layouts/mainroad/_default/single.html
+++ b/layouts/mainroad/_default/single.html
@@ -18,9 +18,7 @@
       {{- end }}
     </header>
     {{- if .Params.thumbnail }}
-    <figure class="post__thumbnail">
-      <img src="{{ .Params.thumbnail | relURL }}" alt="{{ .Title }}">
-    </figure>
+	{{ partial "post_thumbnail.html" (dict "class" "post" "page" .) }}
     {{- end }}
     {{- partial "post_toc.html" . -}}
     <div class="content post__content clearfix">
