--- a/layouts/mainroad/partials/post_toc.html
+++ b/layouts/mainroad/partials/post_toc.html
@@ -1,8 +1,10 @@
 {{ if .Param "toc" }}
+{{- if gt (len .TableOfContents) 32 }}<!-- Issue #247 -->
 <details class="post__toc toc">
-    <summary class="toc__title">Indice</summary>
+    <summary class="toc__title">{{ T "toc_title" }}</summary>
     <div class="toc__menu">
         {{ .TableOfContents }}
     </div>
 </details>
-{{ end }}
+{{- end }}
+{{- end }}
