Minor Fix - Fixed navbar css

--- a/layouts/mainroad/partials/menu/menu_css.html
+++ b/layouts/mainroad/partials/menu/menu_css.html
@@ -10,7 +10,7 @@
       color: white;
     }
     .my_navbar li {
-      padding: 15px 30px;
+      padding: 0.8rem 1.5rem;
       list-style: none;
       text-transform: uppercase;
       justify-content: center;
