--- a/layouts/mainroad/_default/baseof.html
+++ b/layouts/mainroad/_default/baseof.html
@@ -22,9 +22,9 @@
 
     <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
-    {{ range .Site.Params.customCSS -}}
+    {{ range .Site.Params.customCSS }}
     <link rel="stylesheet" href="{{ . | relURL }}">
-    {{- end }}
+    {{ end }}
 
     {{ with .OutputFormats.Get "rss" -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s">` .Rel .MediaType.Type .RelPermalink $.Site.Title | safeHTML }}
