Minor Fix - Fixed typography css

--- a/layouts/mainroad/partials/logo.html
+++ b/layouts/mainroad/partials/logo.html
@@ -53,7 +53,7 @@
 
     <!-- sottotitolo -->
     <div class="logo__item logo__text" style="display: block; text-align: center;">
-			{{ with $logoSubtitle }}<div class="logo__tagline">{{ . }}</div>{{ end }}
+			{{ with $logoSubtitle }}<div class="logo__tagline" style="color: inherit;">{{ . }}</div>{{ end }}
 		</div>
   </div>
 
