--- a/static/static/css/customTypography.css
+++ b/static/static/css/customTypography.css
@@ -1,27 +1,46 @@
-h1 {
-  font-size: 3.6rem;
+
+body {
+  font-size: 1.3rem;
+  line-height: 1.3rem;
+}
+
+h1, .logo__title {
+  font-size: 2.3rem;
 }
 
 h2 {
-  font-size: 2.9rem;
-}
-
-h3 {
-  font-size: 2.2rem;
-}
-
-h4 {
   font-size: 2.0rem;
 }
 
+h3, .main__title {
+  font-size: 1.7rem;
+}
+
+h4, .list__title {
+  font-size: 1.5rem;
+}
+
 h5, table th {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
 }
 
 h6 {
-  font-size: 1.6rem;
+  font-size: 1.3rem;
 }
 
 p, li {
-  font-size: 1.4rem;
+  font-size: 1.3rem;
+}
+
+.list__meta {
+    display: inline-block;
+}
+
+.meta__item {
+    margin-inline-end: 1rem;
+    display: inline-block;
+}
+
+.main__title {
+  color: #e22d30;
 }
