--- a/layouts/mainroad/_default/baseof.html
+++ b/layouts/mainroad/_default/baseof.html
@@ -83,6 +83,8 @@
   </script>
 {{ end }}
 
+{{- partial "snow.html" . -}}
+
 <script data-goatcounter="https://codingepaduli-github.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
