--- a/static/static/css/customImages.css
+++ b/static/static/css/customImages.css
@@ -1,3 +1,14 @@
+/* Impostando max-width: 100%; indico che la
+ dimensione massima == dimensione originale.
+
+Applicando le regole CSS 
+  max-width: 80vw;
+  max-height: 80vw;
+un immagine scala solo se:
+	dimensione originale > 80vw orizzontali
+ oppure se 
+	dimensione originale > 80vw verticali */
+
 /* Extra Small Devices, Phones */
 @media screen and (min-width : 320px) {
 	img {
