--- a/layouts/mainroad/partials/menu/menu_button_css.html
+++ b/layouts/mainroad/partials/menu/menu_button_css.html
@@ -17,6 +17,7 @@
       justify-content: center;
       align-items: center; /* allinea le righe nel pulsante */
       flex-direction: column;
+      font-size: 1.0rem;
     }
     /* Righe nel pulsante */
     .menu_button label span {
